--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -7,5 +7,9 @@
     "contact": "Contacto",
     "hero-presentation": "Hola, soy Brian Exequiel",
     "hero-profession": "Desarrollador Web",
-    "hero-paragraph": "Con experiencia en UX/UI y programación, transformo ideas en negocios digitales, asegurando resultados que conectan con usuarios y atraen clientes."
+    "hero-paragraph": "Con experiencia en UX/UI y programación, transformo ideas en negocios digitales, asegurando resultados que conectan con usuarios y atraen clientes.",
+    "about-title": "Sobre mi",
+    "about-paragraph": "Soy Brian tengo 24 años y actualmente me dedico a la programación. Realize una diplomatura en Desarrollo Web Full Stack con la Universidad UTN desempeñandome con el Stack MERN y a lo largo de mi carrera además adquiri conocimientos en diseño UX/UI de manera autodidacta.",
+    "about-habilities": "Tengo conocimientos en:",
+    "about-certifications": "Certificaciones"
 }
